fix testimonial overflow and inner margin

--- a/style.css
+++ b/style.css
@@ -213,12 +213,14 @@ header{
   flex-direction: column;
   gap: 6.4rem;
   background: var(--second-bg);
+  overflow: hidden;
 }
 
 .testimonial{
   padding: 3.2rem 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 2.4rem;
 
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
@@ -228,12 +230,14 @@ header{
 .testimonial .subtitle:not(.client .subtitle){
   text-align: start;
   color: var(--dark);
+  margin-inline: 3.2rem;
 }
 
 .client{
   display: flex;
   align-items: center;
   gap: .8rem;
+  margin-inline: 3.2rem;
 }
 
 .avatar{
@@ -315,14 +319,25 @@ footer{
   display: flex;
   gap: 3.2rem;
   flex-direction: column;
+  overflow: unset;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
+  height: unset;
 }
 
 .swiper-wrapper, .swiper-pagination{
   position: unset;
+}
+
+.swiper-pagination-bullet-active {
+  opacity: var(--swiper-pagination-bullet-opacity, 1);
+  background: var(--primary-color,var(--swiper-theme-color));
+}
+
+.quote{
+  color: var(--primary-color);
 }
